--- a/index.html
+++ b/index.html
@@ -27,11 +27,7 @@
                     <div class="pt-hero-header">
                         <h1>Recorre, Explora, Descubre</h1>
                     </div>
-                    <div class="pt-hero-text">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Molestiae necessitatibus quibusdam
-                            ipsa voluptas inventore quis cumque voluptatibus, aliquid neque quaerat deserunt. Eos
-                            dolorum illum placeat nostrum eum beatae, ducimus quasi. </p>
-                    </div>
+                    <div class="pt-hero-text"></div>
                     <div class="pt-hero-action">
                         <a class="pt-btn pt-btn_cta" href="">
                             <span class="pt-btn_cta-fill">
